--- a/.prettierrc
+++ b/.prettierrc
@@ -3,8 +3,9 @@
   "tabWidth": 2,
   "singleQuote": false,
   "trailingComma": "none",
+  "arrowParens": "always",
   "bracketSpacing": true,
   "jsxBracketSameLine": true,
-  "semi": true,
+  "semi": false,
   "useTabs": false
 }
